# AI-Powered-Phishing-Detection

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
Docker/: .dockerignore  Dockerfile  docker-compose.yml
backend/: __init__.py  main.py
backend/api/: auth.py  predict.py
backend/core/: config.py  database.py  inference.py  rate_limiter.py  security.py
backend/schemas/: __init__.py  predict.py
configs/: training.yaml
docs/: PRD.md  PhishingDetection_PRD_RoBERTa.docx
frontend/: streamlit_app.py
reports/: email_evaluation_report.txt  url_evaluation_report.txt
scripts/: build_prd_docx.py  eda.py  test_api.py
src/: __init__.py
src/pipeline/: __init__.py  aggregator.py
src/preprocess/: __init__.py  clean_and_map.py  dataset_builder.py  download_hf_dataset.py  email_parser.py  tokenize_datasets.py  url_normalizer.py  visualize_distribution.py
tests/: conftest.py
tests/backend/: test_api.py  test_auth.py  test_inference.py  test_predict.py  test_rate_limiter.py  test_schemas.py
tests/src/pipeline/: test_aggregator.py
tests/src/preprocess/: test_email_parser.py  test_url_normalizer.py
